Account Details css fixed z-index

--- a/Bidcast/my-app/src/pages/Profile-Page/AccountDetails.scss
+++ b/Bidcast/my-app/src/pages/Profile-Page/AccountDetails.scss
@@ -8,9 +8,12 @@
     padding-left: 2%;
     padding-right: 2%;
     padding-top: 3%;
+    // position: absolute;
+    z-index: -100;
+    // left: 0px;
 
     .Detail_col_Left {
-        margin-bottom: 3%;
+        margin-bottom: 5%;
     }
     .Detail_col_Right {
         margin-right: 0%;
@@ -18,9 +21,11 @@
     }
 }
 @media screen and (max-width: 766px) {
-    .card-text {
-        width: 300px !important;
-        //     //   background-color: red;
+    .details_container {
+        margin-right: 0 !important;
+        margin-left: 0px !important;
+
+        //   background-color: red;
     }
 }
 .edit_pro_container {
